nginx/nginx-ingress.prod.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prod-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
  - hosts:
    - brianbrown.dev
    - www.brianbrown.dev
    secretName: prod-tls
  rules:
  - host: brianbrown.dev
    http:
      paths:
      - path: /api/
        backend:
          serviceName: prod-api
          servicePort: 80
      - path: /me
        backend:
          serviceName: prod-me
          servicePort: 80
      - path: /groceries
        backend:
          serviceName: prod-groceries
          servicePort: 80
      - path: /
        backend:
          serviceName: prod-portfolio
          servicePort: 80
